--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "bold-ui": "1.0.0-beta.8"
+    "bold-ui": "1.0.0-beta.8",
+    "react-router": "5.0.1",
+    "react-router-dom": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
