--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-scripts": "3.0.1",
     "bold-ui": "1.0.0-beta.8",
     "react-router": "5.0.1",
-    "react-router-dom": "5.0.1"
+    "react-router-dom": "5.0.1",
+    "emotion": "10.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
