--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bold-ui": "1.0.0-beta.8",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
-    "emotion": "10.0.9"
+    "emotion": "10.0.9",
+    "final-form": "4.15.0",
+    "react-final-form": "6.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
