--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
     "react-scripts": "3.0.1",
     "bold-ui": "1.0.0-beta.8",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
-    "emotion": "10.0.9"
+    "emotion": "10.0.9",
+    "react-final-form": "6.3.0",
+    "final-form": "4.15.0",
+    "final-form-arrays": "1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "babel-core": "6.26.3",
+    "babel-runtime": "6.26.0"
   }
 }
